--- a/wallabag.xcodeproj/xcshareddata/xcschemes/bagit.xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/bagit.xcscheme
@@ -43,6 +43,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "094AA03A2629EB1F006E5605"
+               BuildableName = "wallabagTests.xctest"
+               BlueprintName = "wallabagTests"
+               ReferencedContainer = "container:wallabag.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
