--- a/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag (iOS).xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag (iOS).xcscheme
@@ -82,6 +82,9 @@
             ReferencedContainer = "container:wallabag.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../iOS/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
