Move package into workspace

--- a/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag (iOS).xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag (iOS).xcscheme
@@ -83,7 +83,7 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <StoreKitConfigurationFileReference
-         identifier = "../../iOS/Configuration.storekit">
+         identifier = "../iOS/Configuration.storekit">
       </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
