--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ Carthage/Build
 fastlane/report.xml
 fastlane/Deliverfile
 fastlane/Appfile
-#fastlane/Preview.html
+fastlane/Preview.html
 #Preview.html
 #fastlane/screenshots
 fastlane/test_output
