--- a/wallabag.xcodeproj/xcshareddata/xcschemes/Shortcuts.xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/Shortcuts.xcscheme
@@ -31,7 +31,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "09BFB28325C8348E00E12B4D"
                BuildableName = "wallabag.app"
-               BlueprintName = "wallabag (iOS)"
+               BlueprintName = "wallabag"
                ReferencedContainer = "container:wallabag.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -63,7 +63,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "09BFB28325C8348E00E12B4D"
             BuildableName = "wallabag.app"
-            BlueprintName = "wallabag (iOS)"
+            BlueprintName = "wallabag"
             ReferencedContainer = "container:wallabag.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -82,7 +82,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "09BFB28325C8348E00E12B4D"
             BuildableName = "wallabag.app"
-            BlueprintName = "wallabag (iOS)"
+            BlueprintName = "wallabag"
             ReferencedContainer = "container:wallabag.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
