--- a/bagit/Info.plist
+++ b/bagit/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>XPC!</string>
 	<key>CFBundleShortVersionString</key>
-	<string>7.0.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>319</string>
 	<key>ITSEncryptionExportComplianceCode</key>
@@ -36,9 +36,9 @@
                 extensionItems, $extensionItem,
                 SUBQUERY (
                     $extensionItem.attachments, $attachment,
-                    ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "com.adobe.pdf" ||
-                    ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image" ||
-                    ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
+                    ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;com.adobe.pdf&quot; ||
+                    ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;public.image&quot; ||
+                    ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;public.url&quot;
                 ).@count == 1
             ).@count &gt; 0
             </string>
