--- a/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag.xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1510"
+   LastUpgradeVersion = "1520"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -83,7 +83,7 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <StoreKitConfigurationFileReference
-         identifier = "../App/WallabagStoreKit.storekit">
+         identifier = "../../App/WallabagStoreKit.storekit">
       </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
