--- a/App/Info.plist
+++ b/App/Info.plist
@@ -2,14 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>DOCUMENTATION_URL</key>
-	<string>https://doc.wallabag.org/en/apps/ios.html</string>
-	<key>PRIVACY_URL</key>
-	<string>https://www.district-web.fr/wallabag-reader/privacy</string>
-	<key>TERMS_OF_USE_URL</key>
-	<string>https://www.district-web.fr/wallabag-reader/privacy</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -24,12 +16,29 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
-	<key>GPTBACK_KEY</key>
-	<string>$(GPTBACK_KEY)</string>
 	<key>CFBundleVersion</key>
 	<string>319</string>
+	<key>DOCUMENTATION_URL</key>
+	<string>https://doc.wallabag.org/en/apps/ios.html</string>
+	<key>GPTBACK_KEY</key>
+	<string>$(GPTBACK_KEY)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>PRIVACY_URL</key>
+	<string>https://www.district-web.fr/wallabag-reader/privacy</string>
+	<key>REVENUECAT_KEY</key>
+	<string>$(REVENUECAT_KEY)</string>
+	<key>TERMS_OF_USE_URL</key>
+	<string>https://www.district-web.fr/wallabag-reader/privacy</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -56,12 +65,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>LSApplicationCategoryType</key>
-	<string>public.app-category.utilities</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 </dict>
 </plist>
